merge server